--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_CmbCuenta_contable_liquidacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_CmbCuenta_contable_liquidacion.cshtml
@@ -15,10 +15,10 @@
         settings.Properties.ValueType = typeof(string);
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
         settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 90);
+        settings.Properties.FilterMinLength = 3;
+
     })
     .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.LiquidacionOrdenCompraController().get_list_bajo_demanda_cta, new Core.Erp.Web.Areas.Importacion.Controllers.LiquidacionOrdenCompraController().get_info_bajo_demanda_cta)
-
-
     .Bind(Model.IdCtaCble);
 
 }
