--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbCuenta_contable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbCuenta_contable.cshtml
@@ -16,6 +16,7 @@
         settings.Properties.ValueType = typeof(string);
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
         settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 90);
+        settings.Properties.FilterMinLength = 3;
     })
     .BindList(new Core.Erp.Web.Areas.Importacion.Controllers.OrdenCompraExteriorController().get_list_bajo_demanda_cta, new Core.Erp.Web.Areas.Importacion.Controllers.OrdenCompraExteriorController().get_info_bajo_demanda_cta)
 
