--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/BaseImpuestoRenta/Anular.cshtml
@@ -16,6 +16,17 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
+                    <label for="ca_descripcion">Año fiscal*</label>
+                    @Html.TextBoxFor(q => q.AnioFiscal, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.AnioFiscal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
                     <label for="ca_descripcion">Fraccion basica*</label>
                     @Html.TextBoxFor(q => q.FraccionBasica, new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.FraccionBasica, "", new { @class = "text-danger" })
