--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Base de impuesto renta";
+    ViewBag.Title = "Proyección de gastos personales";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
