--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Index.cshtml
@@ -30,30 +30,47 @@
         </div>
         <div class="box-body">
             <div class="row">
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="">Fecha inicio*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
-                                @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha inicio*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
                             </div>
+                            @Html.DevExpress().DateEditFor(q => q.fecha_ini, settings =>
+                           {
+                               settings.Name = "fecha_ini";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="">Fecha fin*</label>
-                            <div class="input-group date">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-calendar"></i>
-                                </div>
-                                @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
-                                @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha fin*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
                             </div>
+                            @Html.DevExpress().DateEditFor(q => q.fecha_fin, settings =>
+                           {
+                               settings.Name = "fecha_fin";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                </div>
+
             </div>
         </div>
         <!-- /.box-body -->
