--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Modificar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.RRHH.ro_tabla_Impu_Renta_Info
+﻿@model Core.Erp.Info.RRHH.ro_empleado_proyeccion_gastos_Info
 @{
     ViewBag.Title = "Modificar proyección";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -10,8 +10,10 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "BaseImpuestoRenta", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.AnioFiscal)
-    @Html.HiddenFor(q => q.Secuencia)
+    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
+    @Html.HiddenFor(q => q.IdTransaccion)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -23,50 +25,30 @@
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="ca_descripcion">Fraccion basica*</label>
-                    @Html.TextBoxFor(q => q.FraccionBasica, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.FraccionBasica, "", new { @class = "text-danger" })
+                    <label for="IdProveedor">Empleado</label>
+                    @Html.Partial("_CmbEmpleado_proyeccion", Model.IdEmpleado)
+                    @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="ca_descripcion">Exceso hasta*</label>
-                    @Html.TextBoxFor(q => q.ExcesoHasta, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.ExcesoHasta, "", new { @class = "text-danger" })
+                    <label for="IdProveedor">Detalle de gastos de deducibles</label>
+                    @Html.Action("GridViewPartial_proyeccion_gastos_det", new { IdEmpresa = Model.IdEmpresa, IdTransaccion = Model.IdTransaccion })
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="ca_descripcion">Impuesto fraccion basica*</label>
-                    @Html.TextBoxFor(q => q.ImpFraccionBasica, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.ImpFraccionBasica, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="ca_descripcion">% impuesto fraccion excedente*</label>
-                    @Html.TextBoxFor(q => q.Por_ImpFraccion_Exce, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Por_ImpFraccion_Exce, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
+
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","BaseImpuestoRenta",new { Area = "RRHH" },null)">Cancelar</a>
