--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/_GridViewPartial_proyeccion_gastos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/_GridViewPartial_proyeccion_gastos.cshtml
@@ -75,7 +75,7 @@
         settings.Columns.Add("IdEmpleado", "ID").Width = Unit.Percentage(20);
         settings.Columns.Add("AnioFiscal","Año").Width = Unit.Percentage(5);
         settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(20);
-        settings.Columns.Add("pe_nombreCompleato", "Empleado").Width = Unit.Percentage(20);
+        settings.Columns.Add("pe_nombreCompleto", "Empleado").Width = Unit.Percentage(20);
 
 
     });
