--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/_CmbCliente_CXC.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/_CmbCliente_CXC.cshtml
@@ -19,13 +19,15 @@
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
+        settings.Properties.FilterMinLength = 3;
+
 
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.NullText = "== Seleccione ==";
         settings.Properties.AllowNull = true;
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.CuentasPorCobrarReportesController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Reportes.Controllers.CuentasPorCobrarReportesController().get_info_bajo_demanda)
-    .Bind(Model.IdCliente);
+    .Bind(Model.IdCliente == 0 ? "" : Model.IdCliente);
 
 }
 @comboBox.GetHtml()
